--- a/upgrades/upgrade_090_0100.rst
+++ b/upgrades/upgrade_090_0100.rst
@@ -174,6 +174,6 @@ Follow the instructions to upgrade your code to this newer version.
 
 * PHP interface for layout resolver target handlers has been renamed from
   ``Netgen\BlockManager\Persistence\Doctrine\QueryHandler\LayoutResolver\TargetHandler``
-  to ``Netgen\BlockManager\Layout\Resolver\TargetHandler\Doctrine\TargetHandlerInterface``.
+  to ``Netgen\BlockManager\Persistence\Doctrine\QueryHandler\TargetHandlerInterface``.
   You need to implement the new interface in your target handlers. Method
   signatures remain the same.
