Document removal of NetgenCoreUIBundle

--- a/upgrades/upgrade_0110_0120.rst
+++ b/upgrades/upgrade_0110_0120.rst
@@ -24,5 +24,8 @@ Breaking changes
 * Layouts exported in Netgen Layouts 0.12 cannot be imported into
   Netgen Layouts 0.12, due to updated specification.
 
+* ``Netgen\Bundle\CoreUIBundle\NetgenCoreUIBundle`` bundle has been removed.
+  Remove it from your ``AppKernel`` class.
+
 * First argument to ``ngbm:import`` command, import type, was removed. Now the
   first (and only) argument is the path to file to import data from.
