--- a/upgrades/upgrade_0100_0110.rst
+++ b/upgrades/upgrade_0100_0110.rst
@@ -17,7 +17,7 @@ migration to version 0.11 of Netgen Layouts:
 
 .. code-block:: shell
 
-    $ php app/console doctrine:migrations:migrate --configuration=vendor/netgen/block-manager/migrations/doctrine.yml
+    $ php bin/console doctrine:migrations:migrate --configuration=vendor/netgen/block-manager/migrations/doctrine.yml
 
 Upgrading Netgen Content Browser
 --------------------------------
