--- a/upgrades/upgrade_0130_100.rst
+++ b/upgrades/upgrade_0130_100.rst
@@ -141,13 +141,13 @@ a separate section.
 
   Before:
 
-  .. code-block:: html+jinja
+  .. code-block:: twig
 
       {% import '@NetgenBlockManager/parts/macros.html.twig' as macros %}
 
   After:
 
-  .. code-block:: html+jinja
+  .. code-block:: twig
 
       {% import '@NetgenLayouts/parts/macros.html.twig' as macros %}
 
@@ -172,13 +172,13 @@ a separate section.
 
   Before:
 
-  .. code-block:: html+jinja
+  .. code-block:: twig
 
       {% extends '@ngbm/block/block.html.twig' %}
 
   After:
 
-  .. code-block:: html+jinja
+  .. code-block:: twig
 
       {% extends '@nglayouts/block/block.html.twig' %}
 
@@ -354,12 +354,12 @@ Other breaking changes
 
   Before:
 
-  .. code-block:: html+jinja
+  .. code-block:: twig
 
       {{ ngbm_render_item(result.item, block.itemViewType) }}
 
   After:
 
-  .. code-block:: html+jinja
+  .. code-block:: twig
 
       {{ nglayouts_render_result(result, null, block.itemViewType) }}
